# funathon-PMSC

./: .gitignore  2-GB_model.qmd  2-RF_model.qmd  3-metrics.qmd  4-logging.qmd  README.md  doc_projet.qmd  index.qmd  pyproject.toml
intermediate_solutions/solution_step1/: main.py
intermediate_solutions/solution_step1_to_2/: main.py
starting_point/: 1preprocessing.py  2_model.py  main.py
temp/: table_dict.Qmd  table_dict.qmd  temp.py
