[project]
name = "funathon-project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.4.0",
    "dash-leaflet>=1.1.3",
    "flightradarapi>=1.4.0",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "mlflow>=1.27.0",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "plotnine>=0.15.3",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
]

[[tool.uv.index]]
url = "https://nexus.insee.fr/repository/pypi-proxy/simple"
default = true
